objects/Contact.object
<CustomObject>
    <fields>
        <fullName>nbCar_code_postal_perso__c</fullName>
        <formula>LEN( Adresse_code_postal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb caractère code postal perso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nb_SIP_en_cours__c</fullName>
        <description>Le champ permet de calculer le nombre d&apos;opportunités qualifiées liées à un contact. ( - Prospect qualifié - Prospect probable - Prospect chaud - Intérêt supplémentaire)</description>
        <label>Nombre d&apos;opportunités conseiller</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parti_de_l_entreprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>parti de l&apos;entreprise</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Email_de_repli__c</columns>
        <columns>Adresse_Email_Personnelle__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Email_EM_Lyon__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les contacts</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/7/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>7/8/2015 12:00 AM</value>
        </filters>
        <label>Anniversaires ce mois</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Contacts_du_Compte_Kerensen</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Professionnel</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>kerensen</value>
        </filters>
        <label>Contacts du Compte Kerensen</label>
    </listViews>
    <listViews>
        <fullName>Contacts_existants_Nvelle_opportunit</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Commentaire_du_contact__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Nombre_opportunit_s__c</columns>
        <columns>Nombre_opportunites_sur_criteres__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nature_du_premier_contact__c</field>
            <operation>equals</operation>
            <value>WEB</value>
        </filters>
        <label>Contacts existants - Nvelle opportunité</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMBA_Casa_Janv17</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>PARENT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Mine</filterScope>
        <label>EMBA-Casa-Janv17</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Etudiants_marqu_s_entrepreneurs</fullName>
        <columns>X18caracter__c</columns>
        <columns>Nom_Prenom__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Entrepreneur__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Etudiant</value>
        </filters>
        <filters>
            <field>Entrepreneur__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Etudiants marqués entrepreneurs</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Nouveaux_contacts_depuis_04_06_16</fullName>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>Nature_du_premier_contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Date_de_cr_ation_contact__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>6/6/2016 12:00 AM</value>
        </filters>
        <label>Nouveaux contacts depuis 04/06/16</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Professionels</fullName>
        <columns>Nom_Prenom__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Professionnel</value>
        </filters>
        <label>Professionels</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Tous_les_contacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>Email_de_repli__c</columns>
        <columns>Adresse_Email_Personnelle__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Email_EM_Lyon__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>Tous les contacts tests</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tous_les_contacts1</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>Login__c</columns>
        <columns>Email_de_repli__c</columns>
        <columns>Adresse_Email_Personnelle__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>mfrie</value>
        </filters>
        <label>CONTACT - Création MFR</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Etudiant</fullName>
        <active>true</active>
        <label>Etudiant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professionnel</fullName>
        <active>true</active>
        <label>Professionnel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Etudiant</fullName>
        <active>true</active>
        <label>Prospect Etudiant</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChargePromoFC_CanChangeProfesToProspect</fullName>
        <active>true</active>
        <description>Autoriser seulement Safae ABOUKARAM et Leila HAJRIC à modifier le type d&apos;enregistrement de &quot;Professionnel&quot; vers &quot;Prospect Etudiant&quot; .</description>
        <errorConditionFormula>AND( 
 !$User.ByPass_RV__c,
 PRIORVALUE(Record_Type_Name__c)=&quot;Professionnel&quot;, 
 Record_Type_Name__c=&quot;Prospect Etudiant&quot;, 
 $User.CommunityNickname&lt;&gt; &quot;aboukaram&quot;,
 $User.CommunityNickname&lt;&gt; &quot;dreveton&quot;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &quot;Professionnel&quot; vers &quot;Prospect Etudiant&quot; vous est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChargePromoFI_CanChangeProspectToProfess</fullName>
        <active>true</active>
        <description>Autoriser seulement Nathalie SEUX et Delphine CESAR à modifier le type d&apos;enregistrement de &quot;Prospect Etudiant&quot; vers &quot;Professionnel&quot; .</description>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 PRIORVALUE(Record_Type_Name__c)=&quot;Prospect Etudiant&quot;,
 Record_Type_Name__c=&quot;Professionnel&quot;,
 AND($User.CommunityNickname&lt;&gt; &quot;seux&quot;, 
     $User.CommunityNickname&lt;&gt; &quot;cesar&quot;,
     $User.CommunityNickname&lt;&gt; &quot;dreveton&quot;
) 
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &quot;Prospect Etudiant&quot; vers &quot;Professionnel&quot; vous est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForbidChangeEtudiantToProfessionnel</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 PRIORVALUE(Record_Type_Name__c)=&quot;Etudiant&quot;,
 Record_Type_Name__c=&quot;Professionnel&quot;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &apos;Etudiant&apos; à &apos;Professionnel&apos; est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForbidChangeEtudiantToProspect</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 PRIORVALUE(Record_Type_Name__c)=&quot;Etudiant&quot;,
 Record_Type_Name__c=&quot;Prospect Etudiant&quot;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &apos;Etudiant&apos; à &apos;Prospect Etudiant&apos; est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForbidChangeProfessionnelToEtudiant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 PRIORVALUE(Record_Type_Name__c)= &quot;Professionnel&quot;,
 Record_Type_Name__c=&quot;Etudiant&quot;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &apos;Professionnel&apos; à &apos;Etudiant&apos; est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForbidChangeProspectToEtudiant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 PRIORVALUE( Record_Type_Name__c)= &apos;Prospect Etudiant&apos;,
 Record_Type_Name__c=&apos;Etudiant&apos;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement de &apos;Prospect Etudiant&apos; à &apos;Etudiant&apos; est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForbidChangeRecordType</fullName>
        <active>true</active>
        <description>Interdire le changement de type d&apos;enregistrement à tout autre personne que : Nathalie SEUX, Delphine CESAR, Safae ABOUKARAM et Leila HAJRIC.</description>
        <errorConditionFormula>AND(
 !$User.ByPass_RV__c,
 ISCHANGED(RecordTypeId),
 $User.CommunityNickname &lt;&gt; &quot;seux&quot;,
 $User.CommunityNickname &lt;&gt; &quot;cesar&quot;,
 $User.CommunityNickname &lt;&gt; &quot;aboukaram&quot;,
 $User.CommunityNickname &lt;&gt; &quot;dreveton&quot;
)</errorConditionFormula>
        <errorMessage>La modification de type d&apos;enregistrement vous est interdite.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact01_Etat_ObligatoirePersonnelle</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
 Adresse_Personnelle_Pays_WF__c  = &quot;ÉTATS-UNIS&quot; , 
Adresse_Personnelle_Pays_WF__c = &quot;CANADA&quot; 
), 
isblank(  Etat__c  ) 
)
)</errorConditionFormula>
        <errorDisplayField>Etat__c</errorDisplayField>
        <errorMessage>Le champ Etat est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact02_Etat_ObligatoireRepli</fullName>
        <active>false</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
and( 
OR 
( 
 Adresse_de_Repli_Pays_WF__c  = &quot;ÉTATS-UNIS&quot; , 
Adresse_de_Repli_Pays_WF__c = &quot;CANADA&quot; 
), 
isblank(  Adresse_de_repli_Etat__c  ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_de_repli_Etat__c</errorDisplayField>
        <errorMessage>Le champ Etat est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact03_Pays_ObligatoirePersonnel</fullName>
        <active>true</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(
OR
(
Adresse_code_postal__c  &lt;&gt; &quot;&quot;,
   D_partement__c  &lt;&gt; &quot;&quot;,
    Etat__c  &lt;&gt; &quot;&quot;,
      Adresse_R_gion__c  &lt;&gt; &quot;&quot;,
         Adresse_Rue__c  &lt;&gt; &quot;&quot;,
           Adresse_Ville__c  &lt;&gt; &quot;&quot;,
 Adresse_Personnelle_Ligne_2__c &lt;&gt; &quot;&quot;,
 Adresse_Personnelle_Ligne_3__c &lt;&gt; &quot;&quot;
),
              ISBLANK(Pays__c)
)
)</errorConditionFormula>
        <errorDisplayField>Pays__c</errorDisplayField>
        <errorMessage>Le champ Pays est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact04_Pays_ObligatoireRepli</fullName>
        <active>false</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND( 
OR 
( 
 Adresse_de_repli_code_postal__c  &lt;&gt; &quot;&quot;, 
 Adresse_de_repli_Etat__c  &lt;&gt; &quot;&quot;, 
 Adresse_Repli_Rue__c  &lt;&gt; &quot;&quot;, 
 Adresse_de_repli_ville__c  &lt;&gt; &quot;&quot;, 
 Adresse_de_repli_Ligne_2__c  &lt;&gt; &quot;&quot;, 
 Adresse_de_repli_Ligne_3__c  &lt;&gt; &quot;&quot; 
), 
ISBLANK( Adresse_de_repli_Pays__c ) 
)
)</errorConditionFormula>
        <errorDisplayField>Adresse_de_repli_Pays__c</errorDisplayField>
        <errorMessage>Le champ Pays est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact05_RegionVsEtat_Personnel</fullName>
        <active>false</active>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
AND(  D_partement__c  &lt;&gt; &quot;&quot;,  Etat__c  &lt;&gt; &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Vérifiez les champs Région et Etat dans l&apos;adresse Personnelle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact06_Prenom_obligatoire</fullName>
        <active>true</active>
        <description>Permet d&apos;afficher un message d&apos;erreur lorsque le prénom n&apos;est pas référencé.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
ISBLANK( FirstName )
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Le champ Prénom est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact07_Civilite_Obligatoire</fullName>
        <active>true</active>
        <description>Permet d&apos;afficher un message d&apos;erreur lorsque la civilité n&apos;est pas référencée.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
ISPICKVAL( Salutation , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Le champ Civilité est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact08_Famil_fonction_Obligatoire</fullName>
        <active>true</active>
        <description>Permet d&apos;afficher un message d&apos;erreur lorsque le champ famille fonction n&apos;est pas renseigné.</description>
        <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; ( and ( 
 LOWER(RecordType.Name) =&quot;professionnel&quot;,
 LOWER(Owner.LastName)&lt;&gt;&quot;interface&quot;,
ISPICKVAL(Famille_Fonction__c, &quot;&quot;) 
))</errorConditionFormula>
        <errorMessage>Le champ Famille fonction est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact09_Maj_Nom_Prenom_Etudiant</fullName>
        <active>true</active>
        <description>Règle régissant les droits en modification des contacts Diplômés. Le nom et le prénom ne sont modifiables que par le profil BDD</description>
        <errorConditionFormula>AND( 
Identifiant_dipl_m__c&lt;&gt;&quot;&quot;, 
OR(ISCHANGED(LastName),  ISCHANGED(FirstName)), 
$Profile.Name &lt;&gt; &quot;BDD&quot;, $Profile.Name &lt;&gt; &quot;FOREVER&quot;, $UserRole.Name &lt;&gt; &quot;Forever&quot;, $Profile.Name &lt;&gt; &quot;Administrateur système&quot;, $Profile.Name &lt;&gt; &quot;Interface&quot;)</errorConditionFormula>
        <errorMessage>Le champ nom et le champ prénom ne peuvent être modifiés que par les équipes Base de données ou Forever pour ce type d&apos;enregistrement !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact10_ville_sans_chiffres</fullName>
        <active>true</active>
        <description>Vérifie la non présence de chiffres dans le champ ville</description>
        <errorConditionFormula>AND (!$User.ByPass_RV__c, 
OR( ISNUMBER(Adresse_Ville__c), OR(CONTAINS(Adresse_Ville__c, &quot;0&quot;),CONTAINS(Adresse_Ville__c, &quot;1&quot;),CONTAINS(Adresse_Ville__c, &quot;2&quot;),CONTAINS(Adresse_Ville__c, &quot;3&quot;),CONTAINS(Adresse_Ville__c, &quot;4&quot;),CONTAINS(Adresse_Ville__c, &quot;5&quot;),CONTAINS(Adresse_Ville__c, &quot;6&quot;),CONTAINS(Adresse_Ville__c, &quot;7&quot;),CONTAINS(Adresse_Ville__c, &quot;8&quot;),CONTAINS(Adresse_Ville__c, &quot;9&quot;))))</errorConditionFormula>
        <errorMessage>Le champ ville ne doit pas contenir de chiffres !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RG_Contact11_ville_repli_sans_chiffres</fullName>
        <active>true</active>
        <errorConditionFormula>AND (!$User.ByPass_RV__c, 
OR( ISNUMBER(Adresse_de_repli_ville__c), OR(CONTAINS(Adresse_de_repli_ville__c, &quot;0&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;1&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;2&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;3&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;4&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;5&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;6&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;7&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;8&quot;),CONTAINS(Adresse_de_repli_ville__c, &quot;9&quot;))))</errorConditionFormula>
        <errorMessage>Le champ adresse de repli: Ville ne doit pas contenir de chiffres !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RV_Contact_Blocage_Plusieurs_emails_coch</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
Appliquer_l_e_mail_professionnel__c=true,
Appliquer_l_e_mail_personnel__c=true,
Appliquer_l_e_mail_EM_Lyon__c=true
)
,


AND(
Appliquer_l_e_mail_professionnel__c=true,
Appliquer_l_e_mail_personnel__c=true
)
,


AND(
Appliquer_l_e_mail_professionnel__c=true,
Appliquer_l_e_mail_EM_Lyon__c=true
)
,


AND(
Appliquer_l_e_mail_personnel__c=true,
Appliquer_l_e_mail_EM_Lyon__c=true
)
)</errorConditionFormula>
        <errorMessage>Merci d&apos;appliquer un seul email à ce contact (en cochant une seule case)</errorMessage>
    </validationRules>
</CustomObject>